fix the arabic lang

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,6 +2,13 @@
   "@@locale": "ar",
   "appTitle": "مسجل تركس",
   "startGameButton": "ابدأ لعبة جديدة",
+
+
   "settingsTitle": "الإعدادات",
-  "themeToggleSubtitle": "قم بالتبديل هنا لتغيير مظهر التطبيق."
+
+  "themeTitle": "الوضع الليلي",
+  "themeSubtitle": "قم بالتبديل لتشغيل و إيقاف الوضع الليلي.",
+
+  "languageTitle": "اللغة",
+  "languageSubtitle": "قم بالتبديل لتبديل لغة التطبيق."
 }
