--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,16 +1,15 @@
 {
   "@@locale": "en",
   "appTitle": "Trex Scorekeeper",
-  "@appTitle": {
-    "description": "The title of the application"
-  },
+
   "startGameButton": "Start a new game",
+  "chooseGameTitle": "Choose game you want to play:",
+  "gameTrexSingle": "Trex Single",
+  "gameTrexPartners": "Trex Partners",
 
   "settingsTitle": "Settings",
-
   "themeTitle": "Dark Mode",
   "themeSubtitle": "Toggle to enable or disable Dark Mode.",
-
   "languageTitle": "Language",
   "languageSubtitle": "Toggle to switch the application language."
 }
